Update Landing_Page to a 100% zoom

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="con">
             <div class="sub-con">
                 <h1 class="hero-heading">All your illustrations in one place</h1>
-                <p class="hero-text">Looking for pixel-perfect illustrations to advertise your business? Illustrion's got you covered. Get access to high-quality, world-class, unique designs by some of our very best to get that business up in the air!</p>
+                <p class="hero-text">Get access to Illustrion's high-quality, world-class, unique designs by some of our very best to get that business up in the air!</p>
                 <button class="btn btn--full">Sign up</button>
             </div>
     
@@ -37,8 +37,8 @@
         </div>
     </header>
 
-    <!-- SOME RANDOM INFO SECTION -->
-    <section class="some-random-info section-padding">
+    <!-- DESIGNS SECTION -->
+    <section class="designs section-padding">
         <h2>Take a peek at some of our designs...</h2>
 
         <div class="illustrations">
@@ -86,6 +86,6 @@
     <footer>
         <p>Copyright &copy; Illustrion 2022</p>
     </footer>
-    
+
 </body>
 </html>
