Add more padding to the designs and quote sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- DESIGNS SECTION -->
-    <section class="designs section-padding">
+    <section class="designs section-padding--extra">
         <h2>Take a peek at some of our designs...</h2>
 
         <div class="illustrations">
@@ -62,7 +62,7 @@
     </section>
 
     <!-- QUOTE SECTION -->
-    <section class="quote section-padding">
+    <section class="quote section-padding--extra">
         <figure class="figure-quote">
             <blockquote cite="https://www.designwizard.com/blog/the-50-best-graphic-design-quotes-of-all-time/">
                 <p>There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim for.</p>
